<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".presentation.activities.MainActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:src="@drawable/ic_share_outline_56" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_horizontal"
            android:text="@string/landing_title"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_horizontal"
            android:text="@string/landing_description"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_choose_photo"
            style="@style/SmallBlueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/choose_photo_button" />

    </LinearLayout>

    <View
        android:id="@+id/overlay_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlayBackgorund"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/pb_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>