<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/bottom_sheet_title" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:minWidth="@dimen/min_button_size"
            android:minHeight="@dimen/min_button_size"
            android:scaleType="center"
            android:src="@drawable/ic_dismiss_24" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/bottom_sheet_message_hint"
            android:inputType="textMultiLine"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textColorHint="#818C99"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"/>

        <Button
            android:id="@+id/btn_send"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="24dp"
            android:text="@string/bottom_sheet_send" />

    </LinearLayout>

</LinearLayout>

</androidx.core.widget.NestedScrollView>